--- a/views/map.ejs
+++ b/views/map.ejs
@@ -44,7 +44,7 @@
       <div id="searchdiv">
       <span ng-controller="SearchController">
         <form name="searchWord">
-          <input type="text" name="sWord" ng-model="keywords" class="input" placeholder="pizza, etc."><br/>
+          <input type="text" name="sWord" ng-model="keywords" class="input" placeholder="pizza, Murray's Bagels, etc."><br/></br>
           <button type="submit" id="submit" value="Search" ng-click="search();">Search the Map</button>
         </form>
         </span>
