--- a/public/style.css
+++ b/public/style.css
@@ -5,17 +5,46 @@ body{
 #map{
   position:absolute; top:0; bottom:0; width:100%;
 }
-
-.overlay{
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 30%;
-  height: 100%;
-  z-index: 10;
+.nav {
   background-color: #949291;
-  /*opacity: .8;*/
+  padding-bottom: 15px;
 }
+.overlay {
+  top: 0;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
+  position: relative; width: 100%;
+  z-index: 10;
+  min-height: 43px !important;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1) !important;
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1) !important;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1) !important;
+/* -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;*/
+}
+.allOrMe {
+  list-style-type: none;
+  text-align: center;
+  padding-right: 200px;
+
+}
+
+.allOrMeli{
+  margin-top: -15px;
+  cursor: pointer;
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+  float: right;
+}
+.allOrMeli:hover{
+  background: #f6f6f6;
+}
+
 .CAToverlay{
   position: fixed;
   top: 0;
@@ -24,113 +53,8 @@ body{
   height: 100%;
   z-index: 10;
   background-color: #949291;
-  /*opacity: .8;*/
 }
-.AllDiv {
-  float: left;
-  width: 40%;
-  border: black;
-  margin-right: 10px;
-  padding-left: 10px;
-  border: 1px solid black;
-  cursor: pointer;
-  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  box-shadow:inset 0px 1px 0px 0px #ffffff;
-  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-  background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-  background-color:#ededed;
-  -webkit-border-top-left-radius:6px;
-  -moz-border-radius-topleft:6px;
-  border-top-left-radius:6px;
-  -webkit-border-top-right-radius:6px;
-  -moz-border-radius-topright:6px;
-  border-top-right-radius:6px;
-  -webkit-border-bottom-right-radius:6px;
-  -moz-border-radius-bottomright:6px;
-  border-bottom-right-radius:6px;
-  -webkit-border-bottom-left-radius:6px;
-  -moz-border-radius-bottomleft:6px;
-  border-bottom-left-radius:6px;
-  text-indent:0;
-  border:1px solid #dcdcdc;
-  display:inline-block;
-  color:#777777;
-  font-family:arial;
-  font-size:15px;
-  font-weight:bold;
-  font-style:normal;
-  height:50px;
-  line-height:50px;
-  width:100px;
-  text-decoration:none;
-  text-align:center;
-  text-shadow:1px 1px 0px #ffffff;
-  margin-left: 15px;
-}
-.MyDiv {
-  float: right;
-  width: 40%;
-  padding-left: 10px;
-  margin-right: 10px;
-  border: 1px solid black;
-  cursor: pointer;
-  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  box-shadow:inset 0px 1px 0px 0px #ffffff;
-  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-  background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-  background-color:#ededed;
-  -webkit-border-top-left-radius:6px;
-  -moz-border-radius-topleft:6px;
-  border-top-left-radius:6px;
-  -webkit-border-top-right-radius:6px;
-  -moz-border-radius-topright:6px;
-  border-top-right-radius:6px;
-  -webkit-border-bottom-right-radius:6px;
-  -moz-border-radius-bottomright:6px;
-  border-bottom-right-radius:6px;
-  -webkit-border-bottom-left-radius:6px;
-  -moz-border-radius-bottomleft:6px;
-  border-bottom-left-radius:6px;
-  text-indent:0;
-  border:1px solid #dcdcdc;
-  display:inline-block;
-  color:#777777;
-  font-family:arial;
-  font-size:15px;
-  font-weight:bold;
-  font-style:normal;
-  height:50px;
-  line-height:50px;
-  width:100px;
-  text-decoration:none;
-  text-align:center;
-  text-shadow:1px 1px 0px #ffffff;
-  margin-right: 50px;
-}
-.MyDiv:hover {
-  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-  background:-moz-linear-gradient( center top, #dfdfdf 25%, #ededed 100% );
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-  background-color:#dfdfdf;
-}
-.MyDiv:active {
-  position:relative;
-  top:1px;
-}
-.AllDiv:hover {
-  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-  background:-moz-linear-gradient( center top, #dfdfdf 25%, #ededed 100% );
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-  background-color:#dfdfdf;
-}
-.AllDiv:active {
-  position:relative;
-  top:1px;
-}
+
 #layerUL {
   list-style-type: none;
   text-align: center;
@@ -140,11 +64,6 @@ body{
   padding-top: 100px;
 }
 
-.allOrMe li{
-  display: inline;
-  list-style-type: none;
-  padding-right: 20px;
-}
 
 #userId {
   visibility: hidden;
@@ -153,42 +72,32 @@ body{
 #resultsUL {
   list-style-type: none;
 }
-.cat {
+
+#layerlist {
+  background-color: #f6f6f6;
+  width: 200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: 0 auto;
+  float: right;
+}
+
+#layerUL {
   cursor: pointer;
-  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-  box-shadow:inset 0px 1px 0px 0px #ffffff;
-  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-  background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-  background-color:#ededed;
-  -webkit-border-top-left-radius:6px;
-  -moz-border-radius-topleft:6px;
-  border-top-left-radius:6px;
-  -webkit-border-top-right-radius:6px;
-  -moz-border-radius-topright:6px;
-  border-top-right-radius:6px;
-  -webkit-border-bottom-right-radius:6px;
-  -moz-border-radius-bottomright:6px;
-  border-bottom-right-radius:6px;
-  -webkit-border-bottom-left-radius:6px;
-  -moz-border-radius-bottomleft:6px;
-  border-bottom-left-radius:6px;
-  text-indent:0;
-  border:1px solid #dcdcdc;
-  display:inline-block;
-  color:#777777;
-  font-family:arial;
-  font-size:15px;
-  font-weight:bold;
-  font-style:normal;
-  height:50px;
-  line-height:50px;
-  width:75%;
-  text-decoration:none;
-  text-align:center;
-  text-shadow:1px 1px 0px #ffffff;
-  margin-right: 40px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.cat {
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-top: 1px solid #ccc;
+}
+.cat:hover {
+  background: #f6f6f6;
+}
+.cat:last-child; {
+  border: none;
 }
 #close {
   float: right;
@@ -209,10 +118,12 @@ h1 {
   margin: 0 auto;
 }
 
+
 #suglist {
   width: 200px;
   margin: 0 auto;
 }
+
 #suggestionsUL {
   cursor: pointer;
   list-style-type: none;
@@ -230,6 +141,7 @@ h1 {
 #sugli:last-child; {
   border: none;
 }
+
 #submit {
   -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
   -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
