--- a/public/style.css
+++ b/public/style.css
@@ -50,10 +50,11 @@ body{
   position: fixed;
   top: 0;
   right: 0;
-  width: 30%;
+  width: 426px;
   height: 100%;
   z-index: 10;
-  background-color: #949291;
+  background-color: #f6f6f6;
+  margin-top: 50px;
 }
 #layerlist {
   background-color: #f6f6f6;
