--- a/views/map.ejs
+++ b/views/map.ejs
@@ -27,8 +27,10 @@
 <body>
   <div ng-app="LayerCtrl" ng-controller="LayerController">
 
-    <div class="overlay" >
+    <div class="overlay">
+
       <div class="nav">
+        <a href='/map' id='title'>TasteBuds</a>
       <span id="userId"><%= user._id %></span>
       <ul class="allOrMe">
           <li class="allOrMeli" id='all' >All</li>
