hides friend tab until functional

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -34,7 +34,7 @@
       <span id="userId"><%= user._id %></span>
       <ul class="allOrMe">
           <li class="allOrMeli" id='all' >All</li>
-          <li class="allOrMeli" id='friends' >Friends</li>
+          <!-- <li class="allOrMeli" id='friends' >Friends</li> -->
           <li ng-click='changeOwner();' class="allOrMeli" id='mine' >Mine</li>
       </ul>
       </div>
