--- a/views/map.ejs
+++ b/views/map.ejs
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.1/angular-filter.js"></script>
-    <script src="js/services/BestService.js"></script>
-    <script src="js/controllers/BestCtrl.js"></script>
-    <script src="js/services/UserService.js"></script>
-    <script src="js/controllers/UserCtrl.js"></script>
+
     <script src="js/controllers/LayerCtrl.js"></script>
     <script src="js/controllers/SearchCtrl.js"></script>
+    <script src="js/controllers/UserCtrl.js"></script>
+    <script src="js/services/UserService.js"></script>
+    <script src="js/services/BestService.js"></script>
+    <script src="js/controllers/BestCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400italic|Averia+Serif+Libre:700' rel='stylesheet' type='text/css'>
@@ -34,7 +35,7 @@
       <span id="userId"><%= user._id %></span>
       <ul class="allOrMe">
           <li class="allOrMeli" id='all' >All</li>
-          <!-- <li class="allOrMeli" id='friends' >Friends</li> -->
+          <li class="allOrMeli" id='friends' >Friends</li>
           <li ng-click='changeOwner();' class="allOrMeli" id='mine' >Mine</li>
       </ul>
       </div>
@@ -68,7 +69,18 @@
             </li>
           </ul>
         </div>
-
+    </div>
+    <div class="friendsOverlay" ng-show='visible'>
+      <span class="fa fa-times fa-lg" id="close" ng-click="close()"></span>
+      <h1>Add a Friend</h1></br></br>
+      <div id="addFriends">
+        <span ng-controller="UserController">
+          <form name="addFriend">
+            <input type="text" name="friendEmail" ng-model="email" class="input" placeholder="search by email"><br/></br>
+            <button type="submit" id="submit" value="Search" ng-click="addFriend();">Add Friend</button>
+          </form>
+        </span>
+      </div>
     </div>
   </div>
 <div id='map'></div>
