adds friends div styling and hide show function

--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,17 @@ body{
   background-color: #f6f6f6;
   margin-top: 68px;
 }
+.friendsOverlay{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 426px;
+  height: 100%;
+  z-index: 10;
+  background-color: #f6f6f6;
+  margin-top: 68px;
+  padding-right: 9px;
+}
 #layerlist {
   background-color: #f6f6f6;
   width: 200px;
@@ -188,4 +199,46 @@ h1 {
   color: #f6f6f6;
   text-decoration: none;
   cursor: pointer;
+}
+#submitFriends {
+  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  box-shadow:inset 0px 1px 0px 0px #ffffff;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
+  background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
+  background-color:#ededed;
+  -webkit-border-top-left-radius:6px;
+  -moz-border-radius-topleft:6px;
+  border-top-left-radius:6px;
+  -webkit-border-top-right-radius:6px;
+  -moz-border-radius-topright:6px;
+  border-top-right-radius:6px;
+  -webkit-border-bottom-right-radius:6px;
+  -moz-border-radius-bottomright:6px;
+  border-bottom-right-radius:6px;
+  -webkit-border-bottom-left-radius:6px;
+  -moz-border-radius-bottomleft:6px;
+  border-bottom-left-radius:6px;
+  text-indent:0;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  color:#777777;
+  font-family:arial;
+  font-size:15px;
+  font-weight:bold;
+  font-style:normal;
+  height:25px;
+  line-height:25px;
+  width:75%;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #ffffff;
+}
+.inputFriends {
+  width: 75%;
+}
+#addFriends {
+  width: 50%;
+  margin: 0 auto;
 }
