--- a/views/map.ejs
+++ b/views/map.ejs
@@ -35,7 +35,7 @@
       <span id="userId"><%= user._id %></span>
       <ul class="allOrMe">
           <li class="allOrMeli" id='all' >All</li>
-          <li class="allOrMeli" id='friends' >Friends</li>
+          <li class="allOrMeli" id='friends' ng-click="showFriends = ! showFriends">Friends</li>
           <li ng-click='changeOwner();' class="allOrMeli" id='mine' >Mine</li>
       </ul>
       </div>
@@ -70,14 +70,14 @@
           </ul>
         </div>
     </div>
-    <div class="friendsOverlay" ng-show='visible'>
-      <span class="fa fa-times fa-lg" id="close" ng-click="close()"></span>
+    <div class="friendsOverlay" ng-show='showFriends'>
+      <span class="fa fa-times fa-lg" id="close" ng-click="showFriends = ! showFriends"></span>
       <h1>Add a Friend</h1></br></br>
       <div id="addFriends">
         <span ng-controller="UserController">
           <form name="addFriend">
-            <input type="text" name="friendEmail" ng-model="email" class="input" placeholder="search by email"><br/></br>
-            <button type="submit" id="submit" value="Search" ng-click="addFriend();">Add Friend</button>
+            <input type="text" name="friendEmail" ng-model="email" class="inputFriends" placeholder="search by email"><br/></br>
+            <button type="submit" id="submitFriends" value="searchFriends" ng-click="addFriend();">Add Friend</button>
           </form>
         </span>
       </div>
