adding put request to updates friends list

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -75,7 +75,7 @@
       <h1>Add a Friend</h1></br></br>
       <div id="addFriends">
         <span ng-controller="UserController">
-          <form name="addFriend">
+          <form name="addingFriends">
             <input type="text" name="friendEmail" ng-model="email" class="inputFriends" placeholder="search by email"><br/></br>
             <button type="submit" id="submitFriends" value="searchFriends" ng-click="addFriend();">Add Friend</button>
           </form>
