styling to category list

--- a/public/style.css
+++ b/public/style.css
@@ -92,7 +92,7 @@ body{
   border-top: 1px solid #ccc;
 }
 .cat:hover {
-  background: #f6f6f6;
+  background: #949291;
 }
 #Tacos {
   border-bottom: 1px solid #ccc;
