refactors to erase need of global variable

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -52,7 +52,7 @@
       <h1>Who has the best <span id="addDivHead"> catText </span> </br>in New York?</h1></br></br>
       <div id="searchdiv">
         <span ng-controller="SearchController">
-          <form name="searchWord">
+          <form name="searching">
             <input type="text" name="sWord" ng-model="keywords" class="input" placeholder="pizza, Murray's Bagels, etc."><br/></br>
             <button type="submit" id="submit" value="Search" ng-click="search();">Search the Map</button>
           </form>
