sets up users to have bests and followers/following

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -72,7 +72,7 @@
     </div>
     <div class="friendsOverlay" ng-show='showFriends'>
       <span class="fa fa-times fa-lg" id="close" ng-click="showFriends = ! showFriends"></span>
-      <h1>Add a Friend</h1></br></br>
+      <h1>Follow Somebody</h1></br></br>
       <div id="addFriends">
         <span ng-controller="UserController">
           <form name="addingFriends">
