tweaks font size for subheaders

--- a/public/style.css
+++ b/public/style.css
@@ -114,12 +114,12 @@ body{
 }
 h1 {
   font-family: 'Playfair Display SC', serif;
-  font-size: 2em;
+  font-size: 24px;
   text-align: center;
 }
 #sug {
   font-family: 'Playfair Display SC', serif;
-  font-size: 2em;
+  font-size: 24px;
   text-align: center;
 }
 #searchdiv {
