fixes template to display friend's name instead of id

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -82,7 +82,7 @@
           <div id="friendslist">
           <ul id="friendsUL">
             <li id="friendli" ng-repeat='friend in friends'>
-              <span id='{{friend.email}}'>{{friend}}</span></br>
+              <span id='{{friend.name}}'>{{friend[1]}}</span></br>
             </li>
           </ul>
         </div>
