--- a/views/map.ejs
+++ b/views/map.ejs
@@ -73,21 +73,21 @@
     <div class="friendsOverlay" ng-show='showFriends'>
       <span class="fa fa-times fa-lg" id="close" ng-click="showFriends = ! showFriends"></span>
       <h1>Follow Somebody</h1></br></br>
+      <span ng-controller="UserController">
       <div id="addFriends">
-        <span ng-controller="UserController">
-          <form name="addingFriends">
-            <input type="text" name="friendEmail" ng-model="email" class="inputFriends" placeholder="search by email"><br/></br>
-            <button type="submit" id="submitFriends" value="searchFriends" ng-click="addFriend();">Follow</button>
-          </form>
-          <div id="friendslist">
-          <ul id="friendsUL">
-            <li id="friendli" ng-repeat='friend in friends'>
-              <span id='{{friend.name}}'>{{friend[1]}}</span></br>
-            </li>
-          </ul>
-        </div>
-        </span>
+        <form name="addingFriends">
+          <input type="text" name="friendEmail" ng-model="email" class="inputFriends" placeholder="search by email"><br/></br>
+          <button type="submit" id="submitFriends" value="searchFriends" ng-click="addFriend();">Follow</button>
+        </form>
       </div>
+      <div id="friendslist">
+        <ul id="friendsUL">
+          <li id="friendli" ng-repeat='friend in friends track by $index'>
+            <span class='friendName' id='{{friend.name}}'>{{friend[1]}}</span></br>
+          </li>
+        </ul>
+      </div>
+      </span>
     </div>
   </div>
 <div id='map'></div>
