--- a/views/map.ejs
+++ b/views/map.ejs
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="friendsOverlay" ng-show='showFriends'>
-      <span class="fa fa-times fa-lg" id="close" ng-click="showFriends = ! showFriends"></span>
+      <span class="fa fa-times fa-lg" id="friendsClose" ng-click="showFriends = ! showFriends"></span>
       <h1>Follow Somebody</h1></br></br>
       <span ng-controller="UserController">
       <div id="addFriends">
