--- a/views/map.ejs
+++ b/views/map.ejs
@@ -62,7 +62,7 @@
       <p id="sug">Take a friend's suggestion</p>
         <div id="suglist">
           <ul id="suggestionsUL">
-            <li id="sugli" ng-repeat='suggestion in suggestions | limitTo:5 | unique: "name"'
+            <li class="sugli" ng-repeat='suggestion in suggestions | limitTo:5 | unique: "name"'
             ng-click="addSug()">
               <span id='{{suggestion.name}}'>{{suggestion.name}}</span></br>
               <span id='{{suggestion.address}}'>{{suggestion.address}}</span>
@@ -82,7 +82,7 @@
       </div>
       <div id="friendslist">
         <ul id="friendsUL">
-          <li id="friendli" ng-repeat='friend in friends track by $index' ng-click="filterFriendsBests()">
+          <li class="friendli" ng-repeat='friend in friends track by $index' ng-click="filterFriendsBests()">
             <span class='friendName' id='{{friend.name}}'>{{friend[1]}}</span></br>
           </li>
         </ul>
