--- a/views/map.ejs
+++ b/views/map.ejs
@@ -28,15 +28,15 @@
 <body>
   <div ng-app="LayerCtrl" ng-controller="LayerController">
 
-    <div class="overlay">
+    <div class="maindiv">
 
       <div class="nav">
         <a href='/map' id='title'>TasteBuds</a>
       <span id="userId"><%= user._id %></span>
-      <ul class="allOrMe">
-          <li class="allOrMeli" id='all' >All</li>
-          <li class="allOrMeli" id='friends' ng-click="showFriends = ! showFriends">Friends</li>
-          <li ng-click='changeOwner();' class="allOrMeli" id='mine' >Mine</li>
+      <ul class="navOptions">
+          <li class="navOptionsli" id='all' ng-click='addAll();'>All</li>
+          <li class="navOptionsli" id='friends' ng-click="showFriends = ! showFriends">Friends</li>
+          <li ng-click='changeOwner();' class="navOptionsli" id='mine' >Mine</li>
       </ul>
       </div>
       <div id="layerlist">
@@ -47,19 +47,19 @@
         </ul>
       </div>
     </div>
-    <div class="CAToverlay" ng-show='visible'>
-      <span class="fa fa-times fa-lg" id="close" ng-click="close()"></span>
+    <div class="overlay" ng-show='visible'>
+      <span class="fa fa-times fa-lg" ng-click="close()"></span>
       <h1>Who has the best <span id="addDivHead"> catText </span> </br>in New York?</h1></br></br>
       <div id="searchdiv">
         <span ng-controller="SearchController">
           <form name="searching">
             <input type="text" name="sWord" ng-model="keywords" class="input" placeholder="pizza, Murray's Bagels, etc."><br/></br>
-            <button type="submit" id="submit" value="Search" ng-click="search();">Search the Map</button>
+            <button type="submit" class="submit" value="Search" ng-click="search();">Search the Map</button>
           </form>
         </span>
       </div>
     </br></br>
-      <p id="sug">Take a friend's suggestion</p>
+      <h1>Take a friend's suggestion</h1>
         <div id="suglist">
           <ul id="suggestionsUL">
             <li class="sugli" ng-repeat='suggestion in suggestions | limitTo:5 | unique: "name"'
@@ -70,14 +70,14 @@
           </ul>
         </div>
     </div>
-    <div class="friendsOverlay" ng-show='showFriends'>
-      <span class="fa fa-times fa-lg" id="friendsClose" ng-click="showFriends = ! showFriends"></span>
+    <div class="overlay" ng-show='showFriends'>
+      <span class="fa fa-times fa-lg" ng-click="showFriends = ! showFriends"></span>
       <h1>Follow Somebody</h1></br></br>
       <span ng-controller="UserController">
       <div id="addFriends">
         <form name="addingFriends">
-          <input type="text" name="friendEmail" ng-model="email" class="inputFriends" placeholder="search by email"><br/></br>
-          <button type="submit" id="submitFriends" value="searchFriends" ng-click="addFriend();">Follow</button>
+          <input type="text" name="friendEmail" ng-model="email" class="input" placeholder="search by email"><br/></br>
+          <button type="submit" class="submit" value="searchFriends" ng-click="addFriend();">Follow</button>
         </form>
       </div>
       <div id="friendslist">
