--- a/views/map.ejs
+++ b/views/map.ejs
@@ -33,18 +33,27 @@
       <div class="nav">
         <a href='/map' id='title'>TasteBuds</a>
       <span id="userId"><%= user._id %></span>
-      <ul class="navOptions">
+      </div>
+      <div id="layerlist">
+        <ul class="navOptions">
           <li class="navOptionsli" id='all' ng-click='addAll();'>All</li>
           <li class="navOptionsli" id='friends' ng-click="showFriends = ! showFriends">Friends</li>
           <li ng-click='changeOwner();' class="navOptionsli" id='mine' >Mine</li>
-      </ul>
-      </div>
-      <div id="layerlist">
-        <ul id="layerUL" class="layers">
+        </ul>
+        <div id='layerdiv'>
+          <ul id="layerUL" >
           <li ng-repeat='layer in layers'>
           <span class="cat" id=' {{layer.name}} ' ng-click="toggle()">{{layer.name}}</span>
           </li>
+        </div>
         </ul>
+        <div id='mybests'>
+          <ul id="bestsUL" >
+            <li ng-repeat='best in bests | unique: "cat"'>
+            <span class="cat" id=' {{best.name}} '>{{best.name}}</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="overlay" ng-show='visible'>
