--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@ body{
 .navOptions {
   list-style-type: none;
   text-align: center;
-  padding-right: 75px;
+  padding-right: 120px;
   margin-top: 10px;
 
 }
@@ -46,7 +46,6 @@ body{
   border-left: 1px solid #ccc;
 }
 .navOptionsli{
-  /*margin-top: -15px;*/
   cursor: pointer;
   font-family: 'Fauna One', serif;
   font-size: 20px;
@@ -62,7 +61,7 @@ body{
 
 #layerlist {
   background-color: #f6f6f6;
-  width: 600px;
+  width: 500px;
   padding-top: 20px;
   padding-bottom: 20px;
   margin: 15px;
@@ -75,12 +74,16 @@ body{
   list-style-type: none;
   text-align: left;
 }
+#bestsUL {
+  list-style-type: none;
+  padding-right: 70px;
+}
 #mybests {
   float: right;
   padding-top: 70px;
 }
 #layerdiv {
-  padding-top: 100px;
+  padding-top: 70px;
   float: left;
 }
 .cat {
@@ -90,6 +93,10 @@ body{
 }
 .cat:hover {
   background: #949291;
+}
+.mybest {
+  font-family: 'Fauna One', serif;
+  font-size: 20px;
 }
 #Tacos {
   border-bottom: 1px solid #ccc;
