--- a/views/map.ejs
+++ b/views/map.ejs
@@ -50,7 +50,8 @@
         <div id='mybests'>
           <ul id="bestsUL" >
             <li ng-repeat='best in bests | unique: "cat"'>
-            <span class="cat" id=' {{best.name}} '>{{best.name}}</span>
+            <span class="mybest" id=' {{best.name}} ' >{{best.name}}</span>
+            <span class="fa fa-cog fa-lg" ng-click="close()"></span>
             </li>
           </ul>
         </div>
