updates angular filter cdn

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -9,7 +9,7 @@
     <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.1/angular-filter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.1/angular-filter.js"></script>
 
     <script src="js/controllers/LayerCtrl.js"></script>
     <script src="js/controllers/SearchCtrl.js"></script>
@@ -112,5 +112,3 @@
 </script>
 </body>
 </html>
-
-
