updates google font cdn

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -19,7 +19,7 @@
     <script src="js/controllers/BestCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
-   <link href='http://fonts.googleapis.com/css?family=Fauna+One|Playfair+Display+SC:700,700italic' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Fauna+One|Playfair+Display+SC:700,700italic' rel='stylesheet' type='text/css'>
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
 <link href="./style.css" rel="stylesheet" type="text/css">
